# OVMF-nightly

./: .gitignore  Cargo.toml
.github/workflows/: ovmf.yml
src/: main.rs
