[package]
name = "OVMF-nightly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["rustls-tls"], default-features = false }
tokio = { version = "1.5.0", features = ["macros", "rt", "rt-multi-thread"] }
chrono = "0.4.23"